--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "highlight.js": "9.12.0",
     "http-server": "0.10.0",
     "jquery": "3.2.1",
-    "lodash": "4.17.4"
+    "lodash": "4.17.4",
+    "tick42-glue": "file:../../../../Users/egavalji/AppData/Local/Tick42/GlueSDK/GlueJS/tick42-glue-4.2.4.tgz"
   },
   "devDependencies": {
     "npm-run-all": "4.1.1"
