Improve the discoverability of the price publisher

--- a/support/tutorial-sample-price-publisher-applications.json
+++ b/support/tutorial-sample-price-publisher-applications.json
@@ -5,7 +5,7 @@
         },
         "allowMultiple": false,
         "autoStart": false,
-        "caption": "SamplePricePublisher",
+        "caption": "Tutorial: SamplePricePublisher",
         "details": {
             "height": 150,
             "isSticky": false,
@@ -17,8 +17,8 @@
         },
         "disabled": false,
         "hidden": false,
-        "name": "SamplePricePublisher",
-        "title": "SamplePricePublisher",
+        "name": "TutorialSamplePricePublisher",
+        "title": "Tutorial: SamplePricePublisher",
         "type": "window",
         "version": "DEMO"
     }
